[package]
name = "kravl-parser"
version = "0.3.0"
authors = ["nilq <i.am@nilq.dk>"]
description = "the kravl language - parser module"
license = "MIT/Apache-2.0"
homepage = "https://github.com/nilq/kravl"
repository = "https://github.com/nilq/kravl"

[lib]
name = "kravl_parser"
path = "src/lib.rs"

[dependencies]